# dir-signature

./: .gitignore  .travis.yml  Cargo.toml  FORMAT.v1.rst  LICENSE-MIT  README.md  README.rst  hash.sh  vagga.yaml
benches/: v1_parser.rs
src/: config.rs  error.rs  hash_type.rs  lib.rs  read.rs
src/v1/: emitter.rs  hash.rs  merge.rs  mod.rs  parser.rs  progress.rs  scan.rs  threaded_writer.rs  writer.rs
tests/: merge.rs  parser.rs  simple_dir.rs
tests/dir1/: hello.txt
tests/dir1/subdir/: file.txt
tests/dir2/: file2.txt
tests/dir2/subdir/: file3.txt
