[package]
name = "dir-signature"
description = """
    This crate allows to create a signature (index) of a directory with files.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["dir", "signature", "file", "sync", "index"]
categories = ["algorithms", "filesystem"]
homepage = "http://github.com/tailhook/dir-signature"
documentation = "http://docs.rs/dir-signature"
version = "0.2.1"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.2.0"
log = "0.3.6"
sha2 = "0.3.0"
blake2 = "0.3.0"
digest-writer = "0.1.0"
generic-array = "0.5.1"
typenum = "1.5.1"
openat = "0.1.2"
num_cpus = "1.2.0"
itertools = "0.6.1"

# for `index` CLI tool
env_logger = "0.4.3"
argparse = "0.2.1"

[dev-dependencies]
matches = "0.1.4"
rustc-hex = "1.0.0"
difference = "1.0.0"
