[package]
name = "dir-signature"
description = """
    This crate allows to create a signature (index) of a directory with files.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["dir", "signature", "file", "sync", "index"]
categories = ["algorithms", "filesystem"]
homepage = "http://github.com/tailhook/dir-signature"
documentation = "http://docs.rs/dir-signature"
version = "0.2.8"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.2.1"
log = "0.4.1"
sha2 = "0.7.0"
blake2 = "0.7.0"
digest-writer = "0.3.1"
generic-array = "0.9.0"
openat = "0.1.13"
itertools = "0.7.3"

num_cpus = { version="1.7.0", optional=true }
futures = { version="0.1.21", optional=true }
futures-cpupool = { version="0.1.7", optional=true }

# for `index` CLI tool
env_logger = "0.5.6"
argparse = "0.2.1"

[profile.release]
lto=true

[features]
default = ["threads"]
threads = ["futures", "futures-cpupool", "num_cpus"]

[dev-dependencies]
matches = "0.1.6"
rustc-hex = "1.0.0"
difference = "2.0.0"
pretty_assertions = "0.5.1"
